--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -2,12 +2,13 @@
     <head>
         <meta name="viewport" content="initial-scale=1.0, width=device-width" />
         <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
-             type="text/javascript" charset="utf-8"></script>
-               <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
-                    type="text/javascript" charset="utf-8"></script>
-                      <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"
-                           type="text/javascript" charset="utf-8"></script>
+                type="text/javascript" charset="utf-8"></script>
+        <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
+                type="text/javascript" charset="utf-8"></script>
+        <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"
+                type="text/javascript" charset="utf-8"></script>
         <script src="{{url_for('static', filename='config.js')}}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">
     </head> 
     <body style='margin: 0'>
